css/style.css
:root {
  --mont-font: "Montserrat";
  --pop-font: "Poppins";
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: var(--mont-font);
}

/* custom style  */
.custom-padding {
  padding-top: 50px !important;
  padding-bottom: 100px !important;
}
.font-Pop {
  font-family: "Poppins", sans-serif;
  font-size: 0.93rem;
}

.font-Mont {
  font-family: "Montserrat", sans-serif;
  font-size: 1.2rem;
  font-weight: 800;
}

.sec-header h3 {
  font-size: 2.5rem;
  font-family: var(--mont-font);
  font-weight: 900;
  position: relative;
  z-index: 1;
}
.sec-header h3::before {
  content: "";
  width: 100%;
  height: 50%;
  background-image: url("./../assets/icons/dots.png");
  background-repeat: repeat;
  position: absolute;
  bottom: -2px;
  left: 0;
  z-index: -1;
}

/* preloader  */
.preloader {
  z-index: 1000000;
  transition: 0.5s;
}
.preloader .circle {
  --size: 50px;
  content: "";
  width: var(--size);
  height: var(--size);
  border-radius: 50%;
  border: 9px solid #eee;
  border-top-color: black;
  position: absolute;
  left: calc(50% - (var(--size) / 2));
  top: calc(50% - (var(--size) / 2));
  z-index: 100000000;
  transition: 1s;

  animation: preload 1s linear infinite both;
}
.preloader .top,
.preloader .bottom {
  transition: 0.5s;
}

@keyframes preload {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(365deg);
  }
}

/* nav  */
nav {
  top: 0;
  right: 0;
  left: 0;
  z-index: 1030;
}
.nav-inButton {
  background-color: white !important;
  position: fixed;

  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.05);
}

.nav-inButton > div > a,
.nav-inButton > div > div > ul > li > a {
  color: black !important;
}
.nav-inButton > div > div > ul > li a::after {
  background-color: black !important;
}

.nav-inTop {
  position: absolute;
}
.nav-inTop > div > div > ul {
  padding: 2rem 0;
}
.nav-inTop > div > div > ul > li a::after {
  background-color: white;
}

@media (max-width: 767px) {
  #navbarNav {
    background-color: white !important;
  }
  #navbarNav > ul > li > a {
    color: black !important;
  }
}

nav > div > a {
  font-size: 25px !important;
}

#navbarNav > ul > li a {
  position: relative;
  transition: 0.5s;
  transform-origin: left center;
  font-size: 14px;
  font-family: var(--pop-font);
}

#navbarNav > ul > li a::after {
  content: "";
  width: 70%;
  height: 1.8px;
  transform: scaleX(0);
  position: absolute;
  left: 8px;
  bottom: 8px;
  transition: 0.5s;
  transform-origin: left center;
}

@media screen and (max-width: 767px) {
  #navbarNav > ul > li a::after {
    width: 100%;
    left: 0;
  }
}

#navbarNav > ul > li a.active::after {
  transform: scaleX(1);
}

/* header  */
header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("./../assets/images/bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

main header h3 {
  font-family: var(--mont-font);
  font-size: 3.125rem;
  font-weight: 800;
}

/* text animation  */
main header > div {
  font-family: var(--mont-font);
  font-size: 1.875rem;
  white-space: nowrap;
}

@media (min-width: 768px) {
  main header div {
    font-size: 2.75rem;
  }
}
@media (min-width: 992px) {
  main header div {
    font-size: 3.75rem;
  }
}

main header > div p {
  font-weight: 200;
}

main header > div span {
  font-weight: 400;
  display: block;
  overflow: hidden;
  width: 0;
  animation: animate 2s infinite alternate;
  -webkit-animation: animate 2s infinite alternate;
}

main header > div span::before {
  position: absolute;
  background-color: white;
  content: "";
  width: 2px;
  height: 70%;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  -webkit-transform: translateY(-50%);
  -moz-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  -o-transform: translateY(-50%);
}

@keyframes animate {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}
/* end text animation  */

header ul li {
  width: 30px;
  height: 30px;
  cursor: pointer;
}

/* section 2  */

#About .image {
  position: relative;
  overflow: visible;
  z-index: 1;
}
#About .image::before {
  content: "";
  width: 80%;
  height: 80%;
  background-image: url("./../assets/icons/dots.png");
  background-repeat: repeat;
  position: absolute;
  z-index: -1;
  left: -10%;
  bottom: -5%;
}

.sec-head {
  font-size: 2.5rem;
  font-weight: 900;
}

#About > div > div > div.col-lg-7 > div > div > h3 {
  font-weight: 800;
}
#About > div > div > div.col-lg-7 > div > div > h4 {
  word-spacing: 6px;
  font-size: 12px;
}
#About > div > div > div.col-lg-7 > div > p {
  font-family: var(--pop-font);
  line-height: 30px;
}

#progress div {
  height: 23px;
}
#progress div span {
  font-size: 13px;
  font-family: var(--mont-font);
  font-weight: 500;
}
#progress > div {
  box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.15) inset;
}

#btnS button {
  font-family: var(--pop-font);
  font-size: 13px;
}

#btnS button:nth-child(2):hover {
  background-color: black;
}

#btnS button:nth-child(2):hover a {
  color: white !important;
}

#btnS button:nth-child(1):hover {
  background-color: white !important;
}

#btnS button:nth-child(1):hover a {
  color: black !important;
}

/* services  */

#Services > div > div > div > div > div > div {
  cursor: pointer;
}

body > main > section.section3 > div > div > div > div > div > div > div {
  width: 70px;
  height: 70px;
}

body > main > section.section3 > div > div > div > div > div > div .icn {
  transition: 0.5s;
}
body > main > section.section3 > div > div > div > div > div > div:hover .icn {
  color: white;
  background-color: black !important;
}

body > main > section.section3 > div > div > div > div > div > div > h5 {
  font-weight: 800;
}
body > main > section.section3 > div > div > div > div > div > div > p {
  line-height: 25px;
  word-spacing: 2px;
}

body > main > section.section3 > div > div > div > div > div {
  box-shadow: 0px 10px 30px -8px rgba(0, 0, 0, 0.1);
}
/* ... */

